# ShaderWriter

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  appveyor.yml  vcpkg.json
source/: CMakeLists.txt
source/ASTGenerator/: ASTGeneratorPch.cpp  ASTGeneratorPrerequisites.cpp  Variable.cpp
source/CompilerGlsl/: CMakeLists.txt  GlslAdaptStatements.cpp  GlslAdaptStatements.hpp  GlslCombinedImageAccessFunctions.cpp  GlslCombinedImageAccessFunctions.hpp  GlslExprAdapter.cpp  GlslExprAdapter.hpp  GlslExprConfigFiller.cpp  GlslExprConfigFiller.hpp  GlslExprVisitor.cpp  GlslExprVisitor.hpp  GlslFillConfig.cpp  GlslFillConfig.hpp  GlslHelpers.cpp  GlslHelpers.hpp  GlslImageAccessNames.hpp  GlslIntrinsicNames.hpp  GlslSampledImageAccessConfig.hpp  GlslSampledImageAccessFunctions.cpp  GlslSampledImageAccessFunctions.hpp  GlslSampledImageAccessNames.hpp  GlslStmtAdapter.cpp  GlslStmtAdapter.hpp  GlslStmtConfigFiller.cpp  GlslStmtConfigFiller.hpp  GlslStmtVisitor.cpp  GlslStmtVisitor.hpp  GlslTextureAccessConfig.hpp  GlslTextureAccessFunctions.cpp  GlslTextureAccessFunctions.hpp  GlslTextureAccessNames.hpp  compileGlsl.cpp
source/CompilerHlsl/: CMakeLists.txt  HlslAdaptStatements.cpp  HlslAdaptStatements.hpp  HlslCombinedImageAccessConfig.hpp  HlslCombinedImageAccessFunctions.cpp  HlslCombinedImageAccessFunctions.hpp  HlslCombinedImageAccessNames.hpp  HlslExprAdapter.cpp  HlslExprAdapter.hpp  HlslExprConfigFiller.cpp  HlslExprConfigFiller.hpp  HlslExprVisitor.cpp  HlslExprVisitor.hpp  HlslFillConfig.cpp  HlslFillConfig.hpp  HlslGenerateStatements.cpp  HlslGenerateStatements.hpp  HlslHelpers.cpp  HlslHelpers.hpp  HlslImageAccessConfig.hpp  HlslImageAccessFunctions.cpp  HlslImageAccessFunctions.hpp  HlslImageAccessNames.hpp  HlslIntrinsicConfig.hpp  HlslIntrinsicFunctions.cpp  HlslIntrinsicFunctions.hpp  HlslIntrinsicNames.hpp  HlslReplaceVariables.cpp  HlslReplaceVariables.hpp  HlslSampledImageAccessConfig.hpp  HlslSampledImageAccessFunctions.cpp  HlslSampledImageAccessFunctions.hpp  HlslSampledImageAccessNames.hpp  HlslShader.cpp  HlslShader.hpp  HlslStmtAdapter.cpp  HlslStmtAdapter.hpp  HlslStmtConfigFiller.cpp  HlslStmtConfigFiller.hpp  HlslStmtVisitor.cpp  (+11 more)
source/CompilerSpirV/: CMakeLists.txt  SpirVAdaptStatements.cpp  SpirVAdaptStatements.hpp  SpirVBlock.cpp  SpirVBlock.hpp  SpirVCombinedImageAccessConfig.hpp  SpirVCombinedImageAccessNames.hpp  SpirVCountActions.cpp  SpirVCountActions.hpp  SpirVDebugHelpers.cpp  SpirVDebugHelpers.hpp  SpirVDebugNames.cpp  SpirVDebugNames.hpp  SpirVEvaluateExpr.cpp  SpirVEvaluateExpr.hpp  SpirVExprAdapter.cpp  SpirVExprAdapter.hpp  SpirVFillConfig.cpp  SpirVFillConfig.hpp  SpirVFunction.cpp  SpirVFunction.hpp  SpirVGenerateStatements.cpp  SpirVGenerateStatements.hpp  SpirVGetSwizzleComponents.cpp  SpirVGetSwizzleComponents.hpp  SpirVHelpers.cpp  SpirVHelpers.hpp  SpirVInstruction.cpp  SpirVInstruction.hpp  SpirVInstruction.inl  SpirVIntrinsicConfig.hpp  SpirVIntrinsicNames.hpp  SpirVMakeAccessChain.cpp  SpirVMakeAccessChain.hpp  SpirVModule.cpp  SpirVModule.hpp  SpirVModuleLiterals.cpp  SpirVModuleLiterals.hpp  SpirVModuleTypes.cpp  SpirVModuleTypes.hpp  (+78 more)
source/GlslCommon/: CMakeLists.txt  GenerateGlslStatements.cpp  GlslCombinedImageAccessConfig.hpp  GlslCombinedImageAccessNames.hpp  GlslFillConfig.cpp  GlslFillConfig.hpp  GlslIntrinsicNames.hpp  GlslStatementsHelpers.cpp  GlslStorageImageAccessNames.hpp
source/ShaderAST/: CMakeLists.txt  Shader.cpp  ShaderAST.natvis  ShaderASTPch.cpp  ShaderASTPrerequisites.cpp  ShaderAllocator.cpp  ShaderBuilder.cpp  ShaderLog.cpp
source/ShaderWriter/: Bool.cpp  Builtins.cpp  CMakeLists.txt  CallableWriter.cpp  CloneExpr.cpp  CloneStmt.cpp  ComputeWriter.cpp  Double.cpp  EntryPointWriter.cpp  ExprSpecialiser.cpp  Float.cpp  FragmentWriter.cpp  GeometryWriter.cpp  GetExprName.cpp  GraphicsPipelineWriter.cpp  Helpers.cpp  Image.cpp  ImageAccessFunctions.cpp  Int.cpp  IntrinsicFunctions.cpp  Intrinsics.cpp  MeshWriter.cpp  MeshWriterEXT.cpp  MeshWriterNV.cpp  ModernGraphicsWriterEXT.cpp  ModernGraphicsWriterNV.cpp  Pcb.cpp  PerVertex.cpp  PipelineWriter.cpp  RayAnyHitWriter.cpp  RayCallableWriter.cpp  RayClosestHitWriter.cpp  RayGenerationWriter.cpp  RayIntersectionWriter.cpp  RayMissWriter.cpp  RayTraceWriter.cpp  SampledImage.cpp  Sampler.cpp  Shader.cpp  ShaderWriterPch.cpp  (+26 more)
source/VulkanLayer/: CMakeLists.txt  PipelineBuilder.cpp  ProgramPipeline.cpp  ShaderDataPtr.cpp  VulkanLayer.cpp
test/: CMakeLists.txt  Common.cpp  Common.hpp  TestExpressions.cpp  TestStatements.cpp  TestVariables.cpp  TestWriter.cpp  TestWriterCommon.hpp  TestWriterControlStatements.cpp  TestWriterDeclarations.cpp  TestWriterHlslImageAccesses.cpp  TestWriterHlslIntrinsics.cpp  TestWriterHlslTextureAccesses.cpp  TestWriterOperations.cpp  TestWriterShader.cpp
test/ASTGenerator/: CMakeLists.txt  TestASTExpressions.cpp  TestASTStatements.cpp  TestASTVariables.cpp
test/ShaderAST/: CMakeLists.txt  TestASTBase.cpp  TestASTBaseTypes.cpp  TestASTExpressions.cpp  TestASTImageTypes.cpp  TestASTIntrinsics.cpp  TestASTOtherTypes.cpp  TestASTStatements.cpp  TestASTStructTypes.cpp  TestASTTypes.cpp  TestASTVariables.cpp
test/ShaderWriter/: CMakeLists.txt  CompileGLSL.cpp  CompileGLSL.hpp  CompileHLSL.cpp  CompileHLSL.hpp  CompileSPIRV.cpp  CompileSPIRV.hpp  GlslToSpv.cpp  GlslToSpv.hpp  TestWriterArraySsboDeclarations.cpp  TestWriterCallableShader.cpp  TestWriterCombinedImageAccesses.cpp  TestWriterCombinedImageDeclarations.cpp  TestWriterCommon.hpp  TestWriterCompositeCtors.cpp  TestWriterComputeShader.cpp  TestWriterConstantDeclarations.cpp  TestWriterConstantIntrinsics.cpp  TestWriterControlStatements.cpp  TestWriterCustomType.cpp  TestWriterDeclarations.cpp  TestWriterFragmentShader.cpp  TestWriterFunction.cpp  TestWriterGeometryShader.cpp  TestWriterGlobalDeclarations.cpp  TestWriterHlslImageAccesses.cpp  TestWriterHlslIntrinsics.cpp  TestWriterHlslTextureAccesses.cpp  TestWriterImageAccesses.cpp  TestWriterImageDeclarations.cpp  TestWriterIncrement.cpp  TestWriterIntrinsics.cpp  (+43 more)
(+1164 files in other folders)
